clusters/rstudio/rstudio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rstudio
  namespace: rstudio
spec:
  selector:
    matchLabels:
      app: rstudio
  template:
    metadata:
      labels:
        app: rstudio
    spec:
      containers:
      - name: rstudio
        image: rocker/rstudio
      - name: haproxy
        image: public.ecr.aws/docker/library/haproxy:latest
        ports:
          - containerPort: 8088
        volumeMounts:
          - name: haproxy
            mountPath: /usr/local/etc/haproxy
            readOnly: true
          - name: persistent-efs
            mountPath: /data
      volumes:
        - name: haproxy
          configMap: 
            name: haproxy
            items:
              - key: haproxy.cfg
                path: haproxy.cfg
        - name: persistent-efs
          persistentVolumnClaim: efs-claim
---

apiVersion: v1
kind: Service
metadata:
  name: rstudio-gateway
  namespace: rstudio
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "alb"
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8088
      name: http
  selector:
    app: rstudio
